Added tests. Set logger properties to ERROR for testing